# thoughtmark

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  BOOTSTRAP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  REUSE.toml  SECURITY.md  biome.json  clippy.toml  deny.toml  justfile  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  tsconfig.base.json  typos.toml
.cargo/: mutants.toml
.changeset/: README.md  config.json
.claude/: managed-settings.json  settings.json
.claude/agents/: crypto-verifier.md
.claude/hooks/: fmt-lint.sh  guard-bash.sh
.claude/rules/: crypto-invariants.md  testing.md  wasm-determinism.md
.claude/skills/verify-determinism/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  nightly-fuzz.yml  osv-scanner.yml  release.yml  scorecard.yml
crates/thoughtmark-cli/: Cargo.toml  README.md
crates/thoughtmark-cli/src/: main.rs
crates/thoughtmark-core/: Cargo.toml  README.md
crates/thoughtmark-core/src/: anchor.rs  base64.rs  bundle.rs  checkpoint.rs  did_key.rs  dsse.rs  envelope.rs  error.rs  hex.rs  lib.rs  ops.rs  scalar.rs  seam.rs  sign.rs  wire.rs
crates/thoughtmark-core/src/canon/: cid.rs  digest.rs  domain.rs  error.rs  jcs.rs  mod.rs  nofloat.rs  salt.rs
crates/thoughtmark-core/src/determinism/: fixtures.rs  mod.rs
crates/thoughtmark-core/src/merkle/: mod.rs  proof.rs  rfc6962.rs  tiles.rs  tree.rs  verify.rs
crates/thoughtmark-core/src/verify/: checks.rs  lineage.rs  mod.rs  policy.rs  result.rs  statement.rs
crates/thoughtmark-core/tests/: checkpoint.rs  gen_bundle_vectors.rs  gen_checkpoint_vectors.rs  gen_merkle_vectors.rs  gen_signing_vectors.rs  merkle.rs  schema_invariants.rs  signing.rs  tier0.rs  verify.rs
crates/thoughtmark-log/: Cargo.toml
crates/thoughtmark-log/src/: lib.rs  memory.rs  sequencer.rs  storage.rs
crates/thoughtmark-log/tests/: log.rs
crates/thoughtmark-schema/: Cargo.toml  README.md
crates/thoughtmark-schema/src/: action.rs  content.rs  derive.rs  ledger.rs  lib.rs  manifest.rs  participant.rs  scalar.rs  statement.rs  turn.rs
crates/thoughtmark-schema/tests/: example.rs
crates/thoughtmark-schemagen/: Cargo.toml  README.md
crates/thoughtmark-schemagen/src/: main.rs
crates/thoughtmark-testkit/: Cargo.toml  README.md
crates/thoughtmark-testkit/src/: lib.rs
crates/thoughtmark-testkit/tests/: conformance.rs
crates/thoughtmark-vectors/: Cargo.toml  README.md
crates/thoughtmark-vectors/src/: lib.rs
crates/thoughtmark-wasm/: Cargo.toml  README.md
crates/thoughtmark-wasm/src/: lib.rs
docs/: ci-handoff-phase-1.md  phase-0-checklist.md  phase-1-handoff-followups.md  phase-3-release-checklist.md  threat-model.md
docs/adr/: 0001-jcs-crate.md  0002-one-core-plus-schema.md  0003-just-pnpm-no-turborepo.md  0004-no-umbrella-meta-crate.md  0005-reimplement-rfc6962.md  0006-fuzz-outside-workspace.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  conformance.md  integrity-not-validity.md  introduction.md  invariants.md
docs/research/: architecture.md  quality-foundations.md  roadmap.md
docs/roadmap/: 00-overview.md  phase-0-foundations.md  phase-1-tier0-core.md  phase-2-human-edits.md  phase-2-log-signing.md  phase-3-verify-apifreeze.md  phase-4-tier2-anchoring.md  phase-5-reference-app.md  phase-6-identity-redaction.md  phase-7-tier3-multiparty.md  phase-8-interop-standardization.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cid.rs  consistency_verify.rs  did_key.rs  dsse_parse.rs  jcs.rs  merkle_verify.rs
scripts/: assert-manifest-toolchain.sh  assert-no-getrandom-wasmbindgen.sh  assert-wasm-blake3.sh  check-dep-direction.sh  release-train-consistency.sh  spec-traceability.sh
spec/: SPEC.md
spec/vectors/: CHANGELOG.md  manifest.json  wasm.blake3
spec/vectors/bundle/0001/: bundle.json
spec/vectors/canon/: canon-0001.json  canon-0002.json
spec/vectors/canon/0002/: input.json
spec/vectors/canon/0003/: input.json
spec/vectors/canon/0004/: input.json
spec/vectors/checkpoint/0001/: input.json
spec/vectors/checkpoint/0002/: checkpoint.json  input.json
spec/vectors/cid/: cid-0001.json
spec/vectors/cid/0001/: expected.txt
spec/vectors/cid/0002/: expected.txt
spec/vectors/cid/0003/: expected.txt
spec/vectors/cid/0004/: expected.txt
spec/vectors/consistency/0001/: input.json
spec/vectors/consistency/0002/: input.json
spec/vectors/consistency/0003/: input.json
spec/vectors/consistency/0004/: input.json
spec/vectors/did/0001/: input.txt  pubkey.hex
spec/vectors/domain/0001/: expected.hex
spec/vectors/domain/0002/: expected.hex
spec/vectors/domain/0003/: expected.hex
spec/vectors/dsse/0001/: input.json
spec/vectors/dsse/0002/: envelope.json  input.json
spec/vectors/dsse/0003/: input.json
spec/vectors/dsse/0004/: input.json
spec/vectors/dsse/0005/: input.json
spec/vectors/dsse/0006/: input.json
spec/vectors/ed25519/0001/: input.json
spec/vectors/ed25519/0002/: input.json
spec/vectors/ed25519/0003/: input.json
spec/vectors/ed25519/0004/: input.json
spec/vectors/ed25519/0005/: input.json
spec/vectors/ed25519/0006/: input.json
spec/vectors/ed25519/0007/: input.json
spec/vectors/ed25519/0008/: input.json
spec/vectors/ed25519/0009/: input.json
spec/vectors/ed25519/0010/: input.json
spec/vectors/hash/: hash-0001.json  hash-0002.json
spec/vectors/hash/0001/: blake3.hex  input.json  sha256.hex
spec/vectors/inclusion/0001/: input.json
spec/vectors/inclusion/0002/: input.json
spec/vectors/inclusion/0003/: input.json
spec/vectors/inclusion/0004/: input.json
spec/vectors/manifest/0001/: input.json  manifest_id.hex
spec/vectors/merkle/0001/: leaves.json
spec/vectors/merkle/0002/: leaves.json  root.txt
spec/vectors/merkle/0003/: leaves.json  root.txt
spec/vectors/negative/: negative-0001.json
supply-chain/: audits.toml  config.toml
(+108 files in other folders)
