# Workspace root — `crates/` ONLY, never spans `apps/` (arch §3.1). The two build graphs (Cargo + pnpm)
# touch at exactly one seam: crates/thoughtmark-wasm cdylib -> packages/core (arch §3.1/§12.2).
[workspace]
resolver = "3"
members = ["crates/*"]
exclude = [
  "fuzz",
] # cargo-fuzz pins a dated nightly; keep it OUT of the 1.96.0 stable workspace (ADR-0006)

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
authors = ["The thoughtmark authors"]
description = "Tamper-evident provenance for human-AI reasoning trails: integrity-of-record, not validity."
repository = "https://github.com/OWNER/thoughtmark"
homepage = "https://github.com/OWNER/thoughtmark"
documentation = "https://docs.rs/thoughtmark-core"
keywords = ["provenance", "integrity", "merkle", "canonicalization", "transparency"]
categories = ["cryptography", "no-std"]

# Audited crate set, pinned, all `default-features = false` (arch §3.6). NO `rand_core` in core.
# `serde_jcs` is BANNED — use `serde_json_canonicalizer` (ADR-0001). Unused-by-Phase-0 entries are inert
# (they only enter Cargo.lock when a crate actually depends on them); they pin the set for Phase 1+.
[workspace.dependencies]
thoughtmark-core = { path = "crates/thoughtmark-core", version = "0.1.0", default-features = false }
thoughtmark-schema = { path = "crates/thoughtmark-schema", version = "0.1.0", default-features = false }
serde_json_canonicalizer = "0.3" # RFC 8785 JCS
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = [
  "alloc",
  "arbitrary_precision",
] }
# `pure` = portable Rust BLAKE3, no SIMD dispatch: identical hash output, the byte-stable choice the reproducible
# wasm wants (qf Domain 7), and it drops the `cpufeatures` runtime-detection dep (which would otherwise pull a
# second `cpufeatures` major alongside the RustCrypto stack's, tripping `multiple_crate_versions`).
blake3 = { version = "1.8", default-features = false, features = ["pure"] }
# sha2 0.10 (not 0.11): the version `ed25519-dalek` 2.x and the broader RustCrypto stack use, so core's normal
# closure carries ONE sha2 / digest / crypto-common (no `multiple_crate_versions`). SHA-256 output is identical.
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false, features = [
  "alloc",
] } # NO rand_core in core
cid = { version = "0.11", default-features = false, features = ["alloc"] }
multihash = { version = "0.19", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
# Tier-1 crypto/encoding set (Phase 2). All no_std+alloc, no `getrandom` on the verify path. `secrecy` 0.10 holds
# the signer seed in a `SecretBox` (zeroized on drop); `bs58` decodes did:key; `base64` carries DSSE/checkpoint
# bytes (emit STANDARD padded, accept std+url-safe on read); `itoa` builds the DSSE PAE length prefix (no leading
# zeros, allocation-free — never `format!`). Inert until a crate depends on them.
secrecy = { version = "0.10", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
itoa = { version = "1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"   # per-crate override allows it ONLY in thoughtmark-wasm
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# doc_markdown is a noisy documentation-style pedantic lint (flags every acronym: JCS, CID, RFC, WASM, BLAKE3).
# Allowing it is a justified relaxation — it is not a correctness/safety lint and does not weaken the no-panic wall.
doc_markdown = "allow"
# multiple_crate_versions defers to the project's `deny.toml` dependency-version policy, which deliberately sets
# `multiple-versions = "warn"` (and `cargo deny check` in ci-rust still reports it at that level). The audited
# crypto stack carries one unavoidable, benign transitive split — `cpufeatures` 0.2 (sha2 / curve25519-dalek) vs
# 0.3 (blake3) — that cannot be pinned to a single major. This is a dependency-hygiene nicety, NOT a
# correctness/security/determinism/no-panic gate; cargo-deny remains the authority. (priority 0 > the cargo
# group's -1, so this single lint is allowed without relaxing the rest of `clippy::cargo`.)
multiple_crate_versions = "allow"
# The no-panic wall — the FULL nine restriction lints, workspace-wide (a panic crossing the WASM boundary is an
# uncatchable RuntimeError, arch §2.3). The `no_std` island crates (core + schema) ALSO pin these nine via
# `#![deny(...)]` in their `lib.rs` as load-bearing in-file documentation of the audited, byte-identical surface.
# Relax per-crate ONLY with justification (e.g. the `tests/` integration harnesses carry `#![allow(...)]` headers
# because a panic there IS the failure signal).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
unreachable = "deny"
todo = "deny"
float_arithmetic = "deny"
string_slice = "deny"

[profile.release]
# NOTE: `trim-paths = "all"` (RFC 3127 reproducible paths) is gated as unstable in this toolchain's cargo, so it
# is deferred to the reproducible-build release job (Phase 3); re-enable here once the pin's cargo stabilizes it.
# Never hand-roll --remap-path-prefix as a substitute (qf Domain 7).
strip = true
lto = "thin"
